--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+.active {
+  font-weight: bold;
+}
+
 /* Header styles */
 header {
   background-color: #333;
