--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,12 @@ main {
   flex-direction: column;
   align-items: center;
   margin: 20px 0;
+  width: 45%;
+}
+
+.tool-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .tool h3 {
